@@ -1,8 +1,6 @@
 v1.0
 	ability to 'save all' for tag editing? shortcut or button?
 	post drag selection..
-	notification window position with dual monitor setup
-	website documentation
 
 Future:
 	lyrics -> allow user to edit, fetch, auto-update to wiki..?
